--- a/views/editGame.hbs
+++ b/views/editGame.hbs
@@ -14,11 +14,12 @@
       <div class="form-group">
         <label for="Bootcamp">Your Bootcamp</label><br>
         <input type="text" name="bootcamp" value="{{bootcamp}}" placeholder="{{bootcamp}}" class="form-control" id="exampleInputPassword1">
+        <small id="passwordHelpInline" class="text-muted">Must be Month in letters, then a / and year 2020. No space in between e.g. March/2020</small>
       </div>
-      <div class="form-group">
+      {{!-- <div class="form-group">
         <label for="github">Github profile</label><br>
         <input type="text" name="githubprofile " value="{{gitHubUrl}}" placeholder="{{gitHubUrl}}" class="form-control" id="exampleInputPassword1">
-      </div>
+      </div> --}}
       <div class="form-group">
         <label for="Play link">Play link</label><br>
         <input type="text" name="Play link" value="{{gameUrl}}" placeholder="{{gameUrl}}" class="form-control" id="exampleInputPassword1">
@@ -28,6 +29,9 @@
         <input type="file" name="photo" class="form-control" id="exampleInputPassword1">
         <input class="hiddenImgValue" type="text" name="imgPathName" value="{{imgPath}}">
         <input class="hiddenImgValue" type="text" name="imgNameName" value="{{imgName}}">
+        <small id="passwordHelpInline" class="text-muted">
+            Must be 500x500 pixels in jpg format. Max 500KB
+        </small>
       </div>
       <br>
       <button type="submit" class="btn btn-secondary btn-login" value="save">Update</button>
