--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,9 +13,9 @@
 
 <body>
   {{!-- NAVBAR --}}
-  
+
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark background-blue">
-  <a class="navbar-brand" href="#">Ironhack Games</a>
+  <a class="navbar-brand" href="/">Ironhack Games</a>
   <form class="form-inline my-2 my-lg-0" method="POST" action="/search-bar-handler">
       {{!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> --}}
